Issue #18520: Fix initsigs(), handle PyOS_InitInterrupts() error

PyOS_InitInterrupts() can raise error when importing the signal module